design fixed (overflow-x: hidden)

--- a/assets/scss/design.scss
+++ b/assets/scss/design.scss
@@ -11,6 +11,9 @@ body {
     Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
     Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
+div#__nuxt {
+  overflow-x: hidden;
+}
 .__top {
   %z-index {
     z-index: 999;
